--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
   <header>
     <nav class=" navbar">
       <div>SDF-10 FRONTEND CODE CHALLENGE</div>
-      <div><button>Sign-in</button></div>
-      <div><button>Sign-up</button></div>
+      <div class="buttonCase">
+        <div><button>Sign-in</button></div>
+        <div><button>Sign-up</button></div>
+      </div>
+    </nav>
+    <nav class="sideNavBar">
+      <img src="Icons/icons8-home-50.png" alt="">
+      <img src="Icons/icons8-add-button-50.png" alt="">
+      <img src="Icons/icons8-person-64.png" alt="">
+      <img src="Icons/icons8-notification-64.png" alt="">
     </nav>
   </header>
   <main></main>
