--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
   <link rel="stylesheet" href="CSS/main.css">
 </head>
 <body>
-  <header>
-    <nav class=" navbar">
-      <div>SDF-10 FRONTEND CODE CHALLENGE</div>
-      <div class="buttonCase">
-        <div><button>Sign-in</button></div>
-        <div><button>Sign-up</button></div>
-      </div>
-    </nav>
-    <nav class="sideNavBar">
-      <img src="Icons/icons8-home-50.png" alt="">
-      <img src="Icons/icons8-add-button-50.png" alt="">
-      <img src="Icons/icons8-person-64.png" alt="">
-      <img src="Icons/icons8-notification-64.png" alt="">
-    </nav>
+  <header class=" navbar">
+    <div>SDF-10 FRONTEND CODE CHALLENGE</div>
+    <div class="buttonCase">
+      <div><button>Sign-in</button></div>
+      <div><button>Sign-up</button></div>
+    </div>
   </header>
+  <nav class="sideNavBar">
+    <div><img src="Icons/icons8-home-50.png" alt=""></div>
+    <div><img src="Icons/icons8-add-button-50.png" alt=""></div>
+    <div><img src="Icons/icons8-person-64.png" alt=""></div>
+    <div><img src="Icons/icons8-notification-64.png" alt=""></div>  
+  </nav>
   <main></main>
   <footer></footer>
 </body>
