--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
     <div><img src="Icons/icons8-person-64.png" alt=""></div>
     <div><img src="Icons/icons8-notification-64.png" alt=""></div>  
   </nav>
-  <main></main>
+  <main>
+    <div class="mainDiv">
+      <div>
+        
+      </div>
+      <div></div>
+      <div></div>
+    </div>
+  </main>
   <footer></footer>
 </body>
 </html>
