--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
     <div><img src="Icons/icons8-person-64.png" alt=""></div>
     <div><img src="Icons/icons8-notification-64.png" alt=""></div>  
   </nav>
-  <main>
-    <div class="mainDiv">
-      <div>
-        
-      </div>
-      <div></div>
+  <main class="mainDiv">
+    <div>
+      <img src="" alt="">
       <div></div>
     </div>
+    <div></div>
+    <div></div>
   </main>
   <footer></footer>
 </body>
