--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
       <div><button>Sign-up</button></div>
     </div>
   </header>
-  <nav class="sideNavBar">
-    <div><img src="Icons/icons8-home-50.png" alt=""></div>
-    <div><img src="Icons/icons8-add-button-50.png" alt=""></div>
-    <div><img src="Icons/icons8-person-64.png" alt=""></div>
-    <div><img src="Icons/icons8-notification-64.png" alt=""></div>  
-  </nav>
-  <main class="mainDiv">
-    <div>
-      <img src="" alt="">
+  <div id="mainSidebar">
+    <nav class="sideNavBar">
+      <div><img src="Icons/icons8-home-50.png" alt=""></div>
+      <div><img src="Icons/icons8-add-button-50.png" alt=""></div>
+      <div><img src="Icons/icons8-person-64.png" alt=""></div>
+      <div><img src="Icons/icons8-notification-64.png" alt=""></div>  
+    </nav>
+    <main class="mainDiv">
+      <div>
+        <img src="" alt="">
+        <div></div>
+      </div>
       <div></div>
-    </div>
-    <div></div>
-    <div></div>
-  </main>
+      <div></div>
+    </main>
+  </div>
   <footer></footer>
 </body>
 </html>
