--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="CSS/header.css">
   <link rel="stylesheet" href="CSS/footer.css">
   <link rel="stylesheet" href="CSS/main.css">
+  <link rel="stylesheet" href="CSS/sidebar.css">
 </head>
 <body>
   <header class=" navbar">
@@ -17,22 +18,49 @@
       <div><button>Sign-up</button></div>
     </div>
   </header>
-  <div id="mainSidebar">
+  <div id="Sidebar">
     <nav class="sideNavBar">
       <div><img src="Icons/icons8-home-50.png" alt=""></div>
       <div><img src="Icons/icons8-add-button-50.png" alt=""></div>
       <div><img src="Icons/icons8-person-64.png" alt=""></div>
       <div><img src="Icons/icons8-notification-64.png" alt=""></div>  
     </nav>
-    <main class="mainDiv">
-      <div>
-        <img src="" alt="">
-        <div></div>
-      </div>
-      <div></div>
-      <div></div>
-    </main>
   </div>
+  <main class="mainDiv">
+    <div>
+      <img src="" alt="">
+      <div>
+        <img src="Image/Ivy.JPG" alt="">
+        <p> Posted by John from Kenya</p>
+        <div>35K 2d</div>
+      </div>
+      <input type="text" name="" id="">
+      <input type="text" name="" id="">
+      <button>Comment</button>
+    </div>
+    <div>
+      <img src="" alt="">
+      <div>
+        <img src="Image/Ivy.JPG" alt="">
+        <p> Posted by John from Kenya</p>
+        <div>35K 2d</div>
+      </div>
+      <input type="text" name="" id="">
+      <input type="text" name="" id="">
+      <button>Comment</button>
+    </div>
+    <div>
+      <img src="" alt="">
+      <div>
+        <img src="Image/Ivy.JPG" alt="">
+        <p> Posted by John from Kenya</p>
+        <div>35K 2d</div>
+      </div>
+      <input type="text" name="" id="">
+      <input type="text" name="" id="">
+      <button>Comment</button>
+    </div>
+  </main>
   <footer></footer>
 </body>
 </html>
