--- a/index.html
+++ b/index.html
@@ -27,36 +27,44 @@
     </nav>
   </div>
   <main class="mainDiv">
-    <div>
-      <img src="" alt="">
+    <div class="gridboxes">
+      <div >
+        <div class="imgDiv">
+          <img src="Image/Ivy.JPG" alt="">
+        </div>
+        <div class="profile-info">
+          <img src="Image/Ava.JPG" alt="">
+          <p> Posted by John from Kenya</p>
+          <div>35K 2d</div>  
+        </div>
+      </div>
       <div>
-        <img src="Image/Ivy.JPG" alt="">
+        <input type="text" name="" placeholder="Text Input" id="">
+        <input type="text" name="" placeholder="Text Input" id="">
+        <button>Comment</button>
+      </div>
+    </div>
+    <div class="gridboxes">
+      <div>
+        <div class="imgDiv">
+          <img src="Image/Ivy.JPG" alt="">
+        </div>
         <p> Posted by John from Kenya</p>
         <div>35K 2d</div>
       </div>
-      <input type="text" name="" id="">
-      <input type="text" name="" id="">
+      <input type="text" name="" placeholder="Text Input" id="">
+      <input type="text" name="" placeholder="Text Input" id="">
       <button>Comment</button>
     </div>
-    <div>
-      <img src="" alt="">
+    <div class="gridboxes">
       <div>
-        <img src="Image/Ivy.JPG" alt="">
+        <div class="imgDiv">
+          <img src="Image/Ivy.JPG" alt="">
+        </div>
         <p> Posted by John from Kenya</p>
         <div>35K 2d</div>
       </div>
-      <input type="text" name="" id="">
-      <input type="text" name="" id="">
-      <button>Comment</button>
-    </div>
-    <div>
-      <img src="" alt="">
-      <div>
-        <img src="Image/Ivy.JPG" alt="">
-        <p> Posted by John from Kenya</p>
-        <div>35K 2d</div>
-      </div>
-      <input type="text" name="" id="">
+      <input type="text" name="" placeholder="Text Input" id="">
       <input type="text" name="" id="">
       <button>Comment</button>
     </div>
