--- a/index.html
+++ b/index.html
@@ -38,35 +38,45 @@
           <div>35K 2d</div>  
         </div>
       </div>
-      <div>
+      <div class="form">
         <input type="text" name="" placeholder="Text Input" id="">
         <input type="text" name="" placeholder="Text Input" id="">
         <button>Comment</button>
       </div>
     </div>
     <div class="gridboxes">
-      <div>
+      <div >
         <div class="imgDiv">
           <img src="Image/Ivy.JPG" alt="">
         </div>
-        <p> Posted by John from Kenya</p>
-        <div>35K 2d</div>
+        <div class="profile-info">
+          <img src="Image/Ava.JPG" alt="">
+          <p> Posted by John from Kenya</p>
+          <div>35K 2d</div>  
+        </div>
       </div>
-      <input type="text" name="" placeholder="Text Input" id="">
-      <input type="text" name="" placeholder="Text Input" id="">
-      <button>Comment</button>
+      <div class="form">
+        <input type="text" name="" placeholder="Text Input" id="">
+        <input type="text" name="" placeholder="Text Input" id="">
+        <button>Comment</button>
+      </div>
     </div>
     <div class="gridboxes">
-      <div>
+      <div >
         <div class="imgDiv">
           <img src="Image/Ivy.JPG" alt="">
         </div>
-        <p> Posted by John from Kenya</p>
-        <div>35K 2d</div>
+        <div class="profile-info">
+          <img src="Image/Ava.JPG" alt="">
+          <p> Posted by John from Kenya</p>
+          <div>35K 2d</div>  
+        </div>
       </div>
-      <input type="text" name="" placeholder="Text Input" id="">
-      <input type="text" name="" id="">
-      <button>Comment</button>
+      <div class="form">
+        <input type="text" name="" placeholder="Text Input" id="">
+        <input type="text" name="" placeholder="Text Input" id="">
+        <button>Comment</button>
+      </div>
     </div>
   </main>
   <footer></footer>
