--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
         <button>Comment</button>
       </div>
     </div>
+    <p id="label">We are going to do more </p>
   </main>
-  <footer></footer>
+  <footer class="footerBox">
+    <img src="Social/icons8-facebook-48.png" alt="">
+    <img src="Social/icons8-twitter-50.png" alt="">
+    <img src="Social/icons8-whatsapp-50.png" alt="">
+    <img src="Social/icons8-male-user-50.png" alt="">
+  </footer>
 </body>
 </html>
